kubernetes/js/js-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: js
  name: js-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 7000
      name: js
  selector:
    app: js
  type: ClusterIP
