kubernetes/js/js-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: js-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: js-svc
            port:
              name: js
